--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <title>Portafolio</title>
 </head>
 <body>
-    
+    <header>
+        <img src="" alt="">
+        <nav>
+            <ul>
+                <li><a href="#">Portafolio</a></li>
+                <li><a href="#">Experiencia</a></li>
+                <li><a href="#">Trabajemos todos</a></li>
+            </ul>
+        </nav>
+    </header> 
+    <section>
+        <h1>¿Hola! Soy <strong>Diego del Villar</strong>, <br> me apasiona el futbol, soy estudiante de <br> <strong>universidad</strong>, me gustan los <strong>tacos y viajar</strong> </h1>
+        <img src="" alt="">
+    </section>
+    <section>Portafolio</section>
+    <section>Experiencia</section>
+    <section>Contacto</section>
+    <footer>Footer</footer>
 </body>
 </html>
