Agregue el primer article sin imagen

--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
         <h1>¿Hola! Soy <strong>Diego del Villar</strong>, <br> me apasiona el futbol, soy estudiante de <br> <strong>universidad</strong>, me gustan los <strong>tacos y viajar</strong> </h1>
         <img src="" alt="">
     </section>
-    <section>Portafolio</section>
+    <section>
+        <h2>Portafolio</h2>
+        <article>
+            <h3>Curso de programaciòn</h3>
+            <h4>HTML/CSS/JAVA</h4>
+            <p>JUN-SEP 2019</p>
+            <p>Aprendiendo a programar</p>
+            <p>Estudie un tiempo porgramaciòn web, aprendiendo a <br> estructurar y diseñar pàginas web, <br> en un lugar muy bonito en el centro de Xalapa<br></p>
+            <img src="" alt="">
+        </article>
+    </section>
     <section>Experiencia</section>
     <section>Contacto</section>
     <footer>Footer</footer>
