Modifique elementos de portafolio del primer section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header> 
     <section>
-        <h1>¿Hola! Soy <strong>Diego del Villar</strong>, <br> me apasiona el futbol, soy estudiante de <br> <strong>universidad</strong>, me gustan los <strong>tacos y viajar</strong> </h1>
+        <h1>¡Hola! Soy <strong>Diego del Villar</strong>, <br> me apasiona el futbol, soy estudiante de <br> <strong>universidad</strong>, me gustan los <strong>tacos y viajar</strong> </h1>
         <img src="" alt="">
     </section>
     <section>
@@ -26,8 +26,8 @@
         <article>
             <h3>Curso de programaciòn</h3>
             <h4>HTML/CSS/JAVA</h4>
-            <p>JUN-SEP 2019</p>
-            <p>Aprendiendo a programar</p>
+            <p><small><strong>JUN-SEP 2019</strong></small></p>
+            <p><small><strong>Aprendiendo a programar</strong></small></p>
             <p>Estudie un tiempo porgramaciòn web, aprendiendo a <br> estructurar y diseñar pàginas web, <br> en un lugar muy bonito en el centro de Xalapa<br></p>
             <img src="" alt="">
         </article>
