Agregue el segundo section, el de experiencia

--- a/index.html
+++ b/index.html
@@ -29,10 +29,20 @@
             <p><small><strong>JUN-SEP 2019</strong></small></p>
             <p><small><strong>Aprendiendo a programar</strong></small></p>
             <p>Estudie un tiempo porgramaciòn web, aprendiendo a <br> estructurar y diseñar pàginas web, <br> en un lugar muy bonito en el centro de Xalapa<br></p>
-            <img src="" alt="">
+            <figure>
+                <img src="" alt="">
+            </figure>
         </article>
     </section>
-    <section>Experiencia</section>
+    <section>
+        <h2>Experiencias</h2>
+        <figure>
+            <img src="" alt="">
+        </figure>
+        <h3>Futbol</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Saepe debitis vel similique at corrupti Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Eaque distinctio vero quae, <br> modi consectetur laboriosam ex corporis reprehenderit perferendis eum dicta voluptate autem debitis sa</p>
+        <a href="#" >Boton</a>
+    </section>
     <section>Contacto</section>
     <footer>Footer</footer>
 </body>
