--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <h1>¡Hola! Soy <strong>Diego del Villar</strong>, <br> me apasiona el futbol, soy estudiante de <br> <strong>universidad</strong>, me gustan los <strong>tacos y viajar</strong> </h1>
         <img src="" alt="">
     </section>
+
     <section>
         <h2>Portafolio</h2>
         <article>
@@ -34,6 +35,7 @@
             </figure>
         </article>
     </section>
+
     <section>
         <h2>Experiencias</h2>
         <figure>
@@ -41,9 +43,17 @@
         </figure>
         <h3>Futbol</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Saepe debitis vel similique at corrupti Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Eaque distinctio vero quae, <br> modi consectetur laboriosam ex corporis reprehenderit perferendis eum dicta voluptate autem debitis sa</p>
-        <a href="#" >Boton</a>
+        <a href="#">Boton</a>
     </section>
-    <section>Contacto</section>
+
+    <section>
+        <form action="">
+            <label for="email">¿Quieres unirte?</label>
+           <input type="text" id="email" name=""email>
+           <input type="submit" value="Enviar">
+        </form>
+    </section>
+
     <footer>Footer</footer>
 </body>
 </html>
