Modifique la forma del input tag para correo

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <section>
         <form action="">
             <label for="email">¿Quieres unirte?</label>
-           <input type="text" id="email" name=""email>
-           <input type="submit" value="Enviar">
+           <input type="email" id="email" name=""email placeholder="Escribeme tu E-mail">
+           <input type="submit" value="Enviar" >
         </form>
     </section>
 
