Agregue ids del navbar

--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
 </head>
 <body>
     <header>
-        <img src="" alt="">
+        <img src="./img/logo-negro.png" alt="">
         <nav>
             <ul>
-                <li><a href="#">Portafolio</a></li>
-                <li><a href="#">Experiencia</a></li>
-                <li><a href="#">Trabajemos todos</a></li>
+                <li><a href="#portafolio">Portafolio</a></li>
+                <li><a href="#experiencia">Experiencia</a></li>
+                <li><a href="#contacto">Trabajemos todos</a></li>
             </ul>
         </nav>
     </header> 
-    <section>
+
+    <section id="">
         <h1>¡Hola! Soy <strong>Diego del Villar</strong>, <br> me apasiona el futbol, soy estudiante de <br> <strong>universidad</strong>, me gustan los <strong>tacos y viajar</strong> </h1>
         <img src="" alt="">
     </section>
 
-    <section>
+    <section id="portafolio">
         <h2>Portafolio</h2>
         <article>
             <h3>Curso de programaciòn</h3>
@@ -36,7 +37,7 @@
         </article>
     </section>
 
-    <section>
+    <section id="experiencia">
         <h2>Experiencias</h2>
         <figure>
             <img src="" alt="">
@@ -46,7 +47,7 @@
         <a href="#">Boton</a>
     </section>
 
-    <section>
+    <section id="contacto">
         <form action="">
             <label for="email">¿Quieres unirte?</label>
            <input type="email" id="email" name=""email placeholder="Escribeme tu E-mail">
