--- a/index.html
+++ b/index.html
@@ -2,20 +2,24 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="./img/flavicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <title>Portafolio</title>
 </head>
 <body>
     <header>
-        <img src="./img/logo-negro.png" alt="">
-        <nav>
-            <ul>
-                <li><a href="#portafolio">Portafolio</a></li>
-                <li><a href="#experiencia">Experiencia</a></li>
-                <li><a href="#contacto">Trabajemos todos</a></li>
-            </ul>
-        </nav>
+        <div>
+            <img src="./img/logo-negro.png" alt="logo de diego" width="150px">
+            <nav>
+                <ul>
+                    <li><a href="#portafolio">Portafolio</a></li>
+                    <li><a href="#experiencia">Experiencia</a></li>
+                    <li><a href="#contacto">Trabajemos todos</a></li>
+                </ul>
+            </nav>
+        </div>
     </header> 
 
     <section id="">
