--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="./img/rubikflavicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/flavicon3.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
