--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="./img/flavicon3.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/flavicon.png" type="image/x-icon">
+    
     <link rel="stylesheet" href="./css/style.css">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
@@ -56,11 +57,11 @@
         </article>
     </section>
 
-    <section id="contacto">
-        <form action="">
-            <label for="email">¿Quieres unirte?</label>
-           <input type="email" id="email" name=""email placeholder="Escribeme tu E-mail">
-           <input type="submit" value="Enviar" >
+    <section class="contact" id="contacto">
+        <form action="" class="contact-form">
+            <label class="contact-form-label" for="email">¿Quieres unirte?</label>
+           <input class="contact-form-email" type="email" id="email" name=""email placeholder="Escribeme tu E-mail">
+           <input class="contact-form-button" type="submit" value="Enviar" >
         </form>
     </section>
 
