--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </header> 
 
     <section class="hero">
-        <h1>¡Hola! Soy <strong>Diego del Villar</strong>, <br> me apasiona el futbol, soy estudiante de <br> <strong>universidad</strong>, me gustan los <strong>tacos y viajar</strong> </h1>
-        <img src="" alt="">
+        <h1>¡Hola! Soy <strong>Diego del Villar</strong>, <br> me apasiona el <strong>futbol</strong>, soy estudiante de <br> <strong>universidad</strong>, me gustan los <strong>tacos y viajar</strong> </h1>
+        <img src="./img/portada.jpg" alt="portadita" width="400px">
     </section>
 
     <section class="portafolio" id="portafolio">
@@ -40,7 +40,7 @@
             <p class="project-url"><small><strong>Aprendiendo a programar</strong></small></p>
             <p class="project-description">Estudie un tiempo porgramaciòn web, aprendiendo a <br> estructurar y diseñar pàginas web, <br> en un lugar muy bonito en el centro de Xalapa<br></p>
             <figure class="project-img-container">
-                <img class="project-img" src="" alt="">
+                <img class="project-img" src="./img/curso.jpg" alt="" width="400px">
             </figure>
         </article>
     </section>
