--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h2>Experiencias</h2>
         <article class="experience">
             <figure class="experience-img-container">
-                <img src="" alt="" class="experience-img">
+                <img src="./img/futbol.jpg" alt="equipo de fut" class="experience-img" width="400px">
             </figure>
             <h3 class="experience-title">Futbol</h3>
             <p class="experience-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Saepe debitis vel similique at corrupti Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Eaque distinctio vero quae, <br> modi consectetur laboriosam ex corporis reprehenderit perferendis eum dicta voluptate autem debitis sa</p>
