Agregue contenedores a la seccion de proyecto, el PORTAFOLIO

--- a/index.html
+++ b/index.html
@@ -25,25 +25,31 @@
             </nav>
         </div>
     </header> 
+    
 
     <section class="hero">
         <h1>¡Hola! Soy <strong>Diego del Villar</strong>, <br> me apasiona el <strong>futbol</strong>, soy estudiante de <br> <strong>universidad</strong>, me gustan los <strong>tacos y viajar</strong> </h1>
         <img src="./img/portada.jpg" alt="portadita" width="400px">
     </section>
 
+
     <section class="portafolio" id="portafolio">
         <h2>Portafolio</h2>
         <article class="project">
-            <h3 class="project-title">Curso de programaciòn</h3>
-            <h4 class="project-subtitle">HTML/CSS/JAVA</h4>
-            <p class="project-date"><small><strong>JUN-SEP 2019</strong></small></p>
-            <p class="project-url"><small><strong>Aprendiendo a programar</strong></small></p>
-            <p class="project-description">Estudie un tiempo porgramaciòn web, aprendiendo a <br> estructurar y diseñar pàginas web, <br> en un lugar muy bonito en el centro de Xalapa<br></p>
+            <div class="project-details">
+                <h3 class="project-title">Curso de programaciòn</h3>
+                <h4 class="project-subtitle">HTML/CSS/JAVA</h4>
+                <p class="prjeoject-date"><small><strong>JUN-SEP 2019</strong></small></p>
+                <p class="project-url"><small><strong>Aprendiendo a programar</strong></small></p>
+                <p class="proct-description">Estudie un tiempo porgramaciòn web, aprendiendo a <br> estructurar y diseñar pàginas web, <br> en un lugar muy bonito en el centro de Xalapa<br></p>
+
+            </div>
             <figure class="project-img-container">
                 <img class="project-img" src="./img/curso.jpg" alt="" width="400px">
             </figure>
         </article>
     </section>
+
 
     <section id="experiencia" class="experiencia">
         <h2>Experiencias</h2>
@@ -57,6 +63,7 @@
         </article>
     </section>
 
+
     <section class="contact" id="contacto">
         <form action="" class="contact-form">
             <label class="contact-form-label" for="email">¿Quieres unirte?</label>
@@ -64,6 +71,7 @@
            <input class="contact-form-button" type="submit" value="Enviar" >
         </form>
     </section>
+
 
     <footer>Footer</footer>
 </body>
