Estilice el header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div>
             <figure class="logo">
-                <img src="./img/logo-negro.png" alt="logo de diego" width="150px">
+                <img src="./img/logo-blanco.png" alt="logo de diego" width="150px">
 
             </figure>
             <nav>
@@ -25,11 +25,11 @@
             </nav>
         </div>
     </header> 
-    
+
 
     <section class="hero">
         <h1>¡Hola! Soy <strong>Diego del Villar</strong>, <br> me apasiona el <strong>futbol</strong>, soy estudiante de <br> <strong>universidad</strong>, me gustan los <strong>tacos y viajar</strong> </h1>
-        <img src="./img/portada.jpg" alt="portadita" width="400px">
+        <!-- <img src="./img/portada.jpg" alt="portadita" width="400px"> -->
     </section>
 
 
@@ -39,9 +39,9 @@
             <div class="project-details">
                 <h3 class="project-title">Curso de programaciòn</h3>
                 <h4 class="project-subtitle">HTML/CSS/JAVA</h4>
-                <p class="prjeoject-date"><small><strong>JUN-SEP 2019</strong></small></p>
+                <p class="project-date"><small><strong>JUN-SEP 2019</strong></small></p>
                 <p class="project-url"><small><strong>Aprendiendo a programar</strong></small></p>
-                <p class="proct-description">Estudie un tiempo porgramaciòn web, aprendiendo a <br> estructurar y diseñar pàginas web, <br> en un lugar muy bonito en el centro de Xalapa<br></p>
+                <p class="project-description">Estudie un tiempo porgramaciòn web, aprendiendo a <br> estructurar y diseñar pàginas web, <br> en un lugar muy bonito en el centro de Xalapa<br></p>
 
             </div>
             <figure class="project-img-container">
