Estilice mi hero, con imagen

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <title>Portafolio</title>
 </head>
+
 <body>
+
     <header class="header">
         <div>
             <figure class="logo">
-                <img src="./img/logo-blanco.png" alt="logo de diego" width="150px">
+                <img src="./img/logo-blanco.png" alt="logo de Diego" width="210px">
 
             </figure>
             <nav>
