Estilice el section de PORTAFOLIO

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             </div>
             <figure class="project-img-container">
-                <img class="project-img" src="./img/curso.jpg" alt="" width="400px">
+                <img class="project-img" src="./img/curso.jpg" alt="" width="700px" height="400px">
             </figure>
         </article>
     </section>
