Acomode el hero

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             </div>
             <figure class="project-img-container">
-                <img class="project-img" src="./img/curso.jpg" alt="" width="500px" height="400px">
+                <img class="project-img" src="./img/img-curso.jpg" alt="" width="700px" height="400px">
             </figure>
         </article>
     </section>
