Estilice el footer y agregue un link, o sea un a

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
 
     <section class="hero">
-        <h1>¡Hola! Soy <strong>Diego del Villar</strong>, <br> me apasiona el <strong>futbol</strong>, soy estudiante de <br> <strong>universidad</strong>, me gustan los <strong>tacos y viajar</strong> </h1>
+        <h1>¡Hola! Soy <strong>Diego del Villar</strong>, <br> me apasiona el <strong>futbol</strong>, soy estudiante 
+            de <br> <strong>universidad</strong> y me encantan los <strong>tacos.</strong></h1>
         <!-- <img src="./img/portada.jpg" alt="portadita" width="400px"> -->
     </section>
 
@@ -73,6 +74,9 @@
     </section>
 
 
-    <footer>Footer</footer>
+    <footer class="footer">
+        <p>Coding Workshop 2019</p>
+        <p>Powered by <a href="#">Diego</a></p>
+    </footer>
 </body>
 </html>
