Estilice el texto de proyecto

--- a/index.html
+++ b/index.html
@@ -45,11 +45,14 @@
                 <h4 class="project-subtitle">HTML/CSS/JAVA</h4>
                 <p class="project-date"><small><strong>JUN-SEP 2019</strong></small></p>
                 <p class="project-url"><small><strong>Aprendiendo a programar</strong></small></p>
-                <p class="project-description">Estudie un tiempo porgramaciòn web, aprendiendo a <br> estructurar y diseñar pàginas web, <br> en un lugar muy bonito en el centro de Xalapa<br></p>
+                <p class="project-description">Estudie un tiempo porgramaciòn web,<br> aprendiendo a  
+                    estructurar y diseñar pàginas <br>
+                     web todos los sàbados, lo cual me gusto mucho y aprendi bastante
+                    en un lugar muy bonito en el centro de Xalapa.<br></p>
 
             </div>
             <figure class="project-img-container">
-                <img class="project-img" src="./img/img-curso.jpg" alt="" width="700px" height="400px">
+                <img class="project-img" src="./img/img-curso.jpg" alt="" width="400px" height="200px">
             </figure>
         </article>
 
