Empece con la seccion de experience

--- a/index.html
+++ b/index.html
@@ -59,16 +59,54 @@
     </section>
 
 
-
-    <section id="experiencia" class="experiencia">
-        <h2>Experiencias</h2>
+    <h2>Experiencias</h2>
+    <section id="experiencia" class="experience-container">
         <article class="experience">
             <figure class="experience-img-container">
                 <img src="./img/futbol.jpg" alt="equipo de fut" class="experience-img" width="400px">
             </figure>
-            <h3 class="experience-title">Futbol</h3>
-            <p class="experience-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Saepe debitis vel similique at corrupti Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Eaque distinctio vero quae, <br> modi consectetur laboriosam ex corporis reprehenderit perferendis eum dicta voluptate autem debitis sa</p>
-            <a class="experience-url" href="#">Boton</a>
+            <div class="experience-details">
+                <h3 class="experience-title">Futbol</h3>
+                <p class="experience-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Saepe debitis vel similique at corrupti Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Eaque distinctio vero quae, <br> modi consectetur laboriosam ex corporis reprehenderit perferendis eum dicta voluptate autem debitis sa</p>
+                <a class="experience-url" href="#">Boton</a>
+
+            </div>
+
+        </article>
+        <article class="experience">
+            <figure class="experience-img-container">
+                <img src="./img/futbol.jpg" alt="equipo de fut" class="experience-img" width="400px">
+            </figure>
+            <div class="experience-details">
+                <h3 class="experience-title">Futbol</h3>
+                <p class="experience-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Saepe debitis vel similique at corrupti Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Eaque distinctio vero quae, <br> modi consectetur laboriosam ex corporis reprehenderit perferendis eum dicta voluptate autem debitis sa</p>
+                <a class="experience-url" href="#">Boton</a>
+
+            </div>
+
+        </article>
+        <article class="experience">
+            <figure class="experience-img-container">
+                <img src="./img/futbol.jpg" alt="equipo de fut" class="experience-img" width="400px">
+            </figure>
+            <div class="experience-details">
+                <h3 class="experience-title">Futbol</h3>
+                <p class="experience-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Saepe debitis vel similique at corrupti Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Eaque distinctio vero quae, <br> modi consectetur laboriosam ex corporis reprehenderit perferendis eum dicta voluptate autem debitis sa</p>
+                <a class="experience-url" href="#">Boton</a>
+
+            </div>
+        </article>
+
+        <article class="experience">
+            <figure class="experience-img-container">
+                <img src="./img/futbol.jpg" alt="equipo de fut" class="experience-img" width="400px">
+            </figure>
+            <div class="experience-details">
+                <h3 class="experience-title">Futbol</h3>
+                <p class="experience-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Saepe debitis vel similique at corrupti Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Eaque distinctio vero quae, <br> modi consectetur laboriosam ex corporis reprehenderit perferendis eum dicta voluptate autem debitis sa</p>
+                <a class="experience-url" href="#">Boton</a>
+
+            </div>
         </article>
     </section>
 
