--- a/index.html
+++ b/index.html
@@ -67,8 +67,21 @@
             </figure>
             <div class="experience-details">
                 <h3 class="experience-title">Futbol</h3>
-                <p class="experience-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Saepe debitis vel similique at corrupti Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Eaque distinctio vero quae, <br> modi consectetur laboriosam ex corporis reprehenderit perferendis eum dicta voluptate autem debitis sa</p>
-                <a class="experience-url" href="#">Boton</a>
+                <p class="experience-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe debitis vel similique at corrupti Lorem ipsum dolor sit a consectetur adipisicing elit. Eaque distinctio vero quae</p>
+                <a class="experience-url" href="#">Juguito de chale</a>
+
+            </div>
+
+        </article>
+
+        <article class="experience">
+            <figure class="experience-img-container">
+                <img src="./img/futbol.jpg" alt="equipo de fut" class="experience-img" width="400px">
+            </figure>
+            <div class="experience-details">
+                <h3 class="experience-title">Futbol</h3>
+                <p class="experience-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. epe debitis vel similique at corrupti Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque distinctio vero quae</p>
+                <a class="experience-url" href="#">Juguito de chale</a>
 
             </div>
 
@@ -79,20 +92,8 @@
             </figure>
             <div class="experience-details">
                 <h3 class="experience-title">Futbol</h3>
-                <p class="experience-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Saepe debitis vel similique at corrupti Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Eaque distinctio vero quae, <br> modi consectetur laboriosam ex corporis reprehenderit perferendis eum dicta voluptate autem debitis sa</p>
-                <a class="experience-url" href="#">Boton</a>
-
-            </div>
-
-        </article>
-        <article class="experience">
-            <figure class="experience-img-container">
-                <img src="./img/futbol.jpg" alt="equipo de fut" class="experience-img" width="400px">
-            </figure>
-            <div class="experience-details">
-                <h3 class="experience-title">Futbol</h3>
-                <p class="experience-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Saepe debitis vel similique at corrupti Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Eaque distinctio vero quae, <br> modi consectetur laboriosam ex corporis reprehenderit perferendis eum dicta voluptate autem debitis sa</p>
-                <a class="experience-url" href="#">Boton</a>
+                <p class="experience-description">Lorem ipsum dolor sit amet, consectetur adipisicing eli Saepe debitis vel similique at corrupti Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque distinctio vero quae</p>
+                <a class="experience-url" href="#">Juguito de chale</a>
 
             </div>
         </article>
@@ -103,8 +104,8 @@
             </figure>
             <div class="experience-details">
                 <h3 class="experience-title">Futbol</h3>
-                <p class="experience-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Saepe debitis vel similique at corrupti Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Eaque distinctio vero quae, <br> modi consectetur laboriosam ex corporis reprehenderit perferendis eum dicta voluptate autem debitis sa</p>
-                <a class="experience-url" href="#">Boton</a>
+                <p class="experience-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Saepe debitis vel similique at corrupti Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Eaque distinctio vero quae</p>
+                <a class="experience-url" href="#">Juguito de chale</a>
 
             </div>
         </article>
