Agregue los iconos sociales a la seccion de contact y quedo estilizado

--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
            <input class="contact-form-email" type="email" id="email" name=""email placeholder="Escribeme tu E-mail">
            <input class="contact-form-button" type="submit" value="Enviar" >
         </form>
+        <div class="social-container">
+           <a href="#" class="social-link facebook" target="_blank" ></a>
+           <a href="#" class="social-link instagram" target="_blank" ></a>
+           <a href="#" class="social-link whatsapp" target="_blank" ></a>
+           <a href="#" class="social-link github" target="_blank" ></a>
+        </div>
     </section>
 
 
