Cambio de JAVA a JAVASCRIPT en section portafolio

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="hero"> <div class="wrapper">
         <h1>¡Hola! Soy <strong>Diego del Villar</strong>, <br> me apasiona el <strong>futbol</strong>, soy estudiante 
             de <br> <strong>universidad</strong> y me encantan los <strong>tacos.</strong></h1>
-        <img src="./img/portada.jpg" alt="portadita" width="400px">
+        <img src="./img/portada.jpg" alt="portadita" width="550px">
 
     </div>
     </section>
@@ -48,7 +48,7 @@
             <article class="project">
                 <div class="project-details">
                     <h3 class="project-title">Curso de programaciòn</h3>
-                    <h4 class="project-subtitle">HTML/CSS/JAVA</h4>
+                    <h4 class="project-subtitle">HTML/CSS/JAVASCRIPT</h4>
                     <p class="project-date"><small><strong>JUN-SEP 2019</strong></small></p>
                     <p class="project-url"><small><strong>Aprendiendo a programar</strong></small></p>
                     <p class="project-description">Estudie un tiempo porgramaciòn web,<br> aprendiendo a  
@@ -88,7 +88,7 @@
     
             <article class="experience">
                 <figure class="experience-img-container">
-                    <img src="./img/futbol.jpg" alt="equipo de fut" class="experience-img" width="400px">
+                    <img src="./img/torneo-uv.jpg" alt="equipo de fut" class="experience-img" width="400px">
                 </figure>
                 <div class="experience-details">
                     <h3 class="experience-title">Futbol</h3>
@@ -131,7 +131,7 @@
     <section class="contact" id="contacto">
         <div class="wrapper">
             <form action="" class="contact-form">
-                <label class="contact-form-label" for="email">¿Quieres unirte?</label>
+                <label class="contact-form-label" for="email">Trabajemos juntos</label>
                <input class="contact-form-email" type="email" id="email" name=""email placeholder="Escribeme tu E-mail">
                <input class="contact-form-button" type="submit" value="Enviar" >
             </form>
