--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <footer class="footer">
         <div class="wrapper">
             <p>Coding Workshop 2019</p>
-            <p>Powered by <a href="https://github.com/DiegodelVillar101">Diego</a></p>
+            <p>Powered by <a href="https://github.com/DiegodelVillar101" target="_blank">Diego</a></p>
 
         </div>
     </footer>
