--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/flavicon.png" type="image/x-icon">
-    
     <link rel="stylesheet" href="./css/style.css">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
@@ -88,14 +88,10 @@
 
     </section>
 
-
-
     <div class="wrapper">
         <h2>Experiencias</h2>
 
     </div>
-
-    
 
     <section id="experiencia" class="experience-container"> 
         <div class="wrapper">
@@ -157,7 +153,6 @@
 
 
 
-
     <section class="contact" id="contacto">
         <div class="wrapper">
             <form action="" class="contact-form">
@@ -177,12 +172,10 @@
 
 
 
-
-
     <footer class="footer">
         <div class="wrapper">
             <p>Coding Workshop 2019</p>
-            <p>Powered by <a href="https://github.com/DiegodelVillar101" target="_blank">Diego</a></p>
+            <p>Powered by <a href="https://github.com/DiegodelVillar101">Diego</a></p>
 
         </div>
     </footer>
