Agregue responsive design al hero

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
                 </a></li>
 
+
             </figure>
             <nav>
                 <ul class="navbar-ul">
@@ -35,13 +36,13 @@
 
 
 
-    <!-- <section class="hero"> <div class="wrapper"> 
-        <h1>¡Hola! Soy <strong>Diego del Villar</strong>, <br> me apasiona el <strong>futbol</strong>, soy estudiante 
+    <section class="hero"> <div class="wrapper"> 
+        <h1 class="hero-title">¡Hola! Soy <strong>Diego del Villar</strong>, <br> me apasiona el <strong>futbol</strong>, soy estudiante 
             de <br> <strong>universidad</strong> y me encantan los <strong>tacos.</strong></h1>
-        <img src="./img/portada.jpg" alt="portadita" width="550px">
+        <!-- <img src="./img/portada.jpg" alt="portadita" width="550px"> -->
 
     </div>
-    </section> -->
+    </section>
 
 
 
