--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
 
 
 
-    <!-- <div class="wrapper">
+     <div class="wrapper">
         <h2>Experiencias</h2>
 
-    </div> -->
+    </div> 
 
     
 
-    <!-- <section id="experiencia" class="experience-container"> 
+     <section id="experiencia" class="experience-container"> 
         <div class="wrapper">
             <article class="experience">
                 <figure class="experience-img-container">
@@ -153,7 +153,7 @@
             </article>
 
         </div>
-    </section> -->
+    </section>
 
 
 
