Agregue responsive design al contact

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="./img/flavicon.png" type="image/x-icon">
-    
     <link rel="stylesheet" href="./css/style.css">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <title>Mi pagina web</title>
 </head>
@@ -158,7 +157,7 @@
 
 
 
-    <!-- <section class="contact" id="contacto">
+    <section class="contact" id="contacto">
         <div class="wrapper">
             <form action="" class="contact-form">
                 <label class="contact-form-label" for="email">Trabajemos juntos</label>
@@ -173,7 +172,7 @@
             </div>
 
         </div>
-    </section> -->
+    </section>
 
 
 
