Agregue el responsive-menu

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 
             </figure>
-            <nav>
+
+            <nav class="menu active">
                 <ul class="navbar-ul">
                     <li class="navbar-item"><a href="#portafolio">Portafolio</a></li>
                     <li class="navbar-item"><a href="#experiencia">Experiencia</a></li>
