Agregue funciones al mobile menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <i class="icon-menu burguer-button"></i>
+    <i id="burger-button" class="icon-menu burguer-button"></i>
 
     <header class="header">
         <div class="wrapper">
@@ -23,7 +23,7 @@
 
             </figure>
 
-            <nav class="menu active">
+            <nav class="menu">
                 <ul class="navbar-ul">
                     <li class="navbar-item"><a href="#portafolio">Portafolio</a></li>
                     <li class="navbar-item"><a href="#experiencia">Experiencia</a></li>
@@ -187,6 +187,7 @@
         </div>
     </footer>
 
+    <script src="./js/script.js"></script>
 
 </body>
 </html>
