--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </div>
     </footer>
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.min.css">
 
     <script src="./js/script.js"></script>
 
